--- a/Services/admin-dashboard/package.json
+++ b/Services/admin-dashboard/package.json
@@ -18,11 +18,8 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@tailwindcss/postcss": "^4.0.4",
     "ngx-toastr": "^19.0.0",
-    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.4",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.0"
   },
@@ -31,6 +28,9 @@
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
