--- a/k8s/20-backend/order-service-deployment.yaml
+++ b/k8s/20-backend/order-service-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: gestion-commandes
     spec:
+      initContainers:
+      - name: wait-for-mongodb
+        image: busybox:1.28
+        command: ['sh', '-c', "until nc -z -v -w30 mongodb 27017; do echo waiting for mongodb; sleep 5; done"]
       containers:
       - name: gestion-commandes
         image: achrefs161/order-service:latest
