--- a/k8s/20-backend/user-auth-deployment.yaml
+++ b/k8s/20-backend/user-auth-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: user-authentication
     spec:
+      initContainers:
+      - name: wait-for-mongodb
+        image: busybox:1.28
+        command: ['sh', '-c', "until nc -z -v -w30 mongodb 27017; do echo waiting for mongodb; sleep 5; done"]
       containers:
       - name: user-authentication
         image: achrefs161/user-auth-service:latest
