--- a/Services/user-authentication/package.json
+++ b/Services/user-authentication/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "jest": "^30.2.0",
