--- a/k8s/20-backend/user-auth-deployment.yaml
+++ b/k8s/20-backend/user-auth-deployment.yaml
@@ -11,6 +11,10 @@ spec:
     metadata:
       labels:
         app: user-authentication
+      annotations:
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '5000'
+        prometheus.io/path: '/metrics'
     spec:
       initContainers:
       - name: wait-for-mongodb
