--- a/k8s/30-frontend/admin-dashboard-deployment.yaml
+++ b/k8s/30-frontend/admin-dashboard-deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: admin-dashboard
     spec:
+      initContainers:
+      - name: wait-for-backend
+        image: busybox:1.28
+        command: ['sh', '-c', "until nc -z -v -w30 user-auth-service 5000 && nc -z -v -w30 product-service 4000 && nc -z -v -w30 order-service 5100; do echo waiting for backend; sleep 5; done"]
       containers:
       - name: admin-dashboard
         image: achrefs161/admin-dashboard:latest
