--- a/k8s/60-logging/01-elasticsearch.yaml
+++ b/k8s/60-logging/01-elasticsearch.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: elasticsearch
     spec:
+      initContainers:
+      - name: wait-for-monitoring
+        image: busybox:1.28
+        command: ['sh', '-c', "until nc -z -v -w30 grafana 3000; do echo waiting for monitoring; sleep 5; done"]
       containers:
       - name: elasticsearch
         image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
