--- a/k8s/60-logging/01-elasticsearch.yaml
+++ b/k8s/60-logging/01-elasticsearch.yaml
@@ -25,7 +25,7 @@ spec:
         - name: discovery.type
           value: single-node
         - name: ES_JAVA_OPTS
-          value: "-Xms512m -Xmx512m"
+          value: "-Xms256m -Xmx256m"
         ports:
         - containerPort: 9200
           name: client
@@ -33,11 +33,11 @@ spec:
           name: transport
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "512Mi"
+            cpu: "250m"
           limits:
-            memory: "2Gi"
-            cpu: "1000m"
+            memory: "768Mi"
+            cpu: "500m"
         volumeMounts:
         - name: es-data
           mountPath: /usr/share/elasticsearch/data
@@ -48,7 +48,7 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 5Gi
+          storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
