--- a/k8s/60-logging/04-fluentd-config.yaml
+++ b/k8s/60-logging/04-fluentd-config.yaml
@@ -9,6 +9,7 @@ data:
     <source>
       @type tail
       path /var/log/containers/*.log
+      exclude_path ["/var/log/containers/*fluentd*.log", "/var/log/containers/*elasticsearch*.log", "/var/log/containers/*kibana*.log"]
       pos_file /var/log/fluentd-containers.log.pos
       tag kubernetes.*
       read_from_head true
